--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.in28minutes.rest.webservices</groupId>
-	<artifactId>rest-api-emadTest</artifactId>
+	<artifactId>AWSCodePipline</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<description>Demo project for Spring Boot</description>
