--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
       - echo post_build
 artifacts:
   files:
-    - target\AWSCodePipline-0.0.1-SNAPSHOT.jar
+    - AWSCodePipline-0.0.1-SNAPSHOT.jar
 
 
 
