--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      java: corretto8
+      java: corretto11
     commands:
       - echo install
       - command
@@ -17,7 +17,9 @@ phases:
   post_build:
     commands:
       - echo post_build
-
+artifacts:
+  files:
+    - target/AWSCodePipline-0.0.1-SNAPSHOT.jar
 
 
 
